@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 
+use std::net::IpAddr;
 use std::str::FromStr;
 use std::sync::Arc;
 
@@ -211,17 +212,29 @@ impl UserGroup {
     }
 
     #[inline]
-    pub(crate) fn allow_anonymous(&self) -> bool {
-        self.anonymous_user.is_some()
+    pub(crate) fn allow_anonymous(&self, client_ip: IpAddr) -> bool {
+        let Some(user) = &self.anonymous_user else {
+            return false;
+        };
+        user.allow_client_ip(client_ip)
     }
 
-    pub(crate) fn get_anonymous_user(&self) -> Option<(Arc<User>, UserType)> {
-        self.anonymous_user
-            .as_ref()
-            .map(|u| (Arc::clone(u), UserType::Anonymous))
+    pub(crate) fn get_anonymous_user(&self, client_ip: IpAddr) -> Option<(Arc<User>, UserType)> {
+        let Some(user) = &self.anonymous_user else {
+            return None;
+        };
+        if user.allow_client_ip(client_ip) {
+            Some((Arc::clone(user), UserType::Anonymous))
+        } else {
+            None
+        }
     }
 
-    pub(crate) fn get_user(&self, username: &str) -> Option<(Arc<User>, UserType)> {
+    pub(crate) fn get_user(
+        &self,
+        username: &str,
+        client_ip: IpAddr,
+    ) -> Option<(Arc<User>, UserType)> {
         if let Some(user) = self.static_users.get(username) {
             return Some((Arc::clone(user), UserType::Static));
         }
@@ -233,7 +246,7 @@ impl UserGroup {
             }
         }
 
-        self.get_anonymous_user()
+        self.get_anonymous_user(client_ip)
     }
 
     fn stop_fetch_job(&self) {
